// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List List is horizontal 1`] = `
<div>
  <div
    class="my-ref-class"
    data-testid="test-list"
  >
    <div
      style="padding-left: 16px;"
    >
      <h2>
        Header
      </h2>
    </div>
    <ul
      class="list-container my-list-class"
      role="list"
    >
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 1
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 2
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 3
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 4
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 5
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
    </ul>
    <div
      style="padding-left: 16px;"
    >
      <h3>
        Footer
      </h3>
    </div>
  </div>
</div>
`;

exports[`List Renders without crashing 1`] = `
<div>
  <div
    class="my-ref-class"
    data-testid="test-list"
  >
    <div
      style="padding-left: 16px;"
    >
      <h2>
        Header
      </h2>
    </div>
    <ul
      class="list-container my-list-class vertical"
      role="list"
    >
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 1
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 2
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 3
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 4
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
      <li
        class="list-item my-list-item-class"
        style="padding: 8px 16px;"
      >
        <div
          id="undefined"
        >
          <p>
            User 5
          </p>
          <div>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
        </div>
      </li>
    </ul>
    <div
      style="padding-left: 16px;"
    >
      <h3>
        Footer
      </h3>
    </div>
  </div>
</div>
`;
